EAT-670 Search scrollbar + quiz height fix

--- a/src/scss/components/SearchInput/_search-input.scss
+++ b/src/scss/components/SearchInput/_search-input.scss
@@ -10,6 +10,24 @@
         0 4px 11px hsla(0, 0%, 0%, 0.1);
       box-sizing: border-box;
       @include respondTo(desktop) {
+        overflow: auto;
+        &::-webkit-scrollbar-track {
+          -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
+          border-radius: 5px;
+          background-color: #f5f5f5;
+        }
+
+        &::-webkit-scrollbar {
+          width: 10px;
+          background-color: #f5f5f5;
+          height: 10px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+          border-radius: 5px;
+          -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
+          background-color: $fish-blue-darker;
+        }
       }
     }
     &__item {
