--- a/src/scss/components/Wizard/_initial-quiz.wizard.scss
+++ b/src/scss/components/Wizard/_initial-quiz.wizard.scss
@@ -59,7 +59,7 @@
         max-height: 57vh;
       }
     }
-    @media screen and (max-height: 739px) and (min-width: 768px) {
+    @media screen and (max-height: 759px) and (min-width: 768px) {
       max-height: 25vh;
     }
     @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
